# aicoursework

./: .gitignore  Missionary Cannibal  README.md  anim.py  animation.py  game.py  pyproject.toml  search.py  searching.py  space_search.py  visualizer.py
8Puzzle/: README.md  game.py  space_search.py
8Puzzle/tests/: test.py
CannibalsandMissionaries/: __init__.py  animation.py  game.py  space_search.py
CannibalsandMissionaries/tests/: test.py
EightPuzzle/: __init__.py  game.py  space_search.py  temp.py
EightPuzzle/tests/: __main__.py  test.py
server/: main.py
tests/: test.py
web/: index.html  package-lock.json  package.json
