[tool.poetry]
name = "cannibalsandmissionaries"
version = "0.1.0"
description = ""
authors = ["javaclll <yugu.upadhyaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "^0.20.1"
pydot = "^1.4.2"
graphvizanim = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
