[tool.poetry]
name = "cannibalsandmissionaries"
version = "0.1.0"
description = ""
authors = ["javaclll <yugu.upadhyaya@gmail.com>", "waterlulu12 <aatishshrestha123@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "^0.20.1"
pydot = "^1.4.2"
graphvizanim = {git = "https://github.com/javaclll/GraphvizAnim.git"}
fastapi = "^0.108.0"
uvicorn = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
